removed jwt secret key from appsettings.json and stored it in user secrets

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>76cee91b-083d-47bb-bf3a-f484830e080c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
